--- a/ghostlink-frontend/index.html
+++ b/ghostlink-frontend/index.html
@@ -3,9 +3,45 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="GhostLink - Anonymous Communication Platform" />
-    <title>GhostLink - Anonymous Communication Platform</title>
+
+    <!-- SEO Meta Tags -->
+    <title>GhostLink: Secure & Anonymous Communication</title>
+    <meta name="description" content="GhostLink is a privacy-first platform for secure, anonymous, and ephemeral text, video, and group conversations. No sign-up required." />
+    <meta name="keywords" content="anonymous chat, secure communication, ephemeral messages, private video call, webrtc, privacy" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://ghostlink.example.com/" />
+    <meta property="og:title" content="GhostLink: Secure & Anonymous Communication" />
+    <meta property="og:description" content="Privacy-first platform for secure, anonymous, and ephemeral conversations." />
+    <meta property="og:image" content="https://ghostlink.example.com/og-image.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://ghostlink.example.com/" />
+    <meta property="twitter:title" content="GhostLink: Secure & Anonymous Communication" />
+    <meta property="twitter:description" content="Privacy-first platform for secure, anonymous, and ephemeral conversations." />
+    <meta property="twitter:image" content="https://ghostlink.example.com/og-image.png" />
+
+    <!-- Structured Data (Schema.org) -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "SoftwareApplication",
+      "name": "GhostLink",
+      "applicationCategory": "CommunicationApplication",
+      "operatingSystem": "Web",
+      "description": "A secure, anonymous communication platform that enables ephemeral conversations without requiring personal information.",
+      "offers": {
+        "@type": "Offer",
+        "price": "0"
+      }
+    }
+    </script>
   </head>
   <body class="bg-base-100 text-base-content">
     <div id="root"></div>
